--- a/index.html
+++ b/index.html
@@ -4,15 +4,120 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./styles/style.css" type="text/css" />
     <title>Spotify Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <header>
+      <img
+        class="spotify-logo"
+        src="./images/spotify-logo.png"
+        alt="spotify-logo"
+      />
+
+      <nav>
+        <ul class="nav-bar">
+          <li>Premium</li>
+
+          <li>Discover</li>
+
+          <li>Help</li>
+
+          <li>Download</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero-image">
+        <h1>Music for everyone.</h1>
+        <p>
+          Spotify is now free on mobile, tablet and computer.
+          <br />
+          Listen to the right music, wherever you are.
+        </p>
+      </section>
+
+      <div class="line">
+        <h2>What’s on Spotify?</h2>
+
+        <hr />
+      </div>
+      <section id="list">
+        <article class="container">
+          <img src="./images/music-icon.png" alt="music-icon" />
+          <h2>Millions of Songs</h2>
+          <p>
+            There are millions of
+            <br />
+            songs on Spotify
+          </p>
+        </article>
+        <article class="container">
+          <img src="./images/high-quality-icon.png" alt="high-quality-icon" />
+          <h2>HD Music</h2>
+          <p>
+            Listen to music as if you
+            <br />
+            were listening live
+          </p>
+        </article>
+
+        <article class="container">
+          <img src="./images/devices-icon.png" alt="devices-icon" />
+          <h2>Stream Everywhere</h2>
+          <p>
+            Stream music on your
+            <br />
+            smartphone, tablet or
+            <br />
+            computer
+          </p>
+        </article>
+      </section>
+    </main>
+
+    <section class="app">
+      <figure class="icon-white">
+      <img src="./images/spotify-icon-white.png" alt="app" />  
+      </figure>
+      
+      <div>
+        <h2>It’s as yeezy as Kanye West.</h2>
+
+        <h2>Search</h2>
+
+        <p>
+          Know what you want to listen to?
+          <br />
+          Just search and hit play.
+        </p>
+
+        <h2>Browse</h2>
+
+        <p>
+          Check out the latest charts,
+          <br />
+          brand new releases and great
+          <br />
+          playlists for right now.
+        </p>
+
+        <h2>Discover</h2>
+
+        <p>
+          Enjoy new music every Monday
+          <br />
+          with your own personal playlist.
+          <br />
+          Or sit back and enjoy Radio.
+        </p>
+
+       
+ 
+
+        <img class="icon-app" src="./images/spotify-app.jpg" alt="app" />
+      </div>
+    </section>
   </body>
 </html>
