--- a/index.html
+++ b/index.html
@@ -4,120 +4,111 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./styles/style.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Signika:wght@300&display=swap"
+      rel="stylesheet"
+    />
+
+    <link href="./styles/style.css" type="text/css" rel="stylesheet" />
+
     <title>Spotify Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
     <header>
-      <img
-        class="spotify-logo"
-        src="./images/spotify-logo.png"
-        alt="spotify-logo"
-      />
+      <img src="./images/spotify-logo.png" alt="Spotify Logo" />
 
       <nav>
-        <ul class="nav-bar">
-          <li>Premium</li>
-
-          <li>Discover</li>
-
-          <li>Help</li>
-
-          <li>Download</li>
+        <ul>
+          <li><a href="/premium">Premium</a></li>
+          <li><a href="/discover">Discover</a></li>
+          <li><a href="/help">Help</a></li>
+          <li><a href="/download">Download</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section class="hero-image">
+      <section class="hero-section" id="hero-section">
         <h1>Music for everyone.</h1>
         <p>
-          Spotify is now free on mobile, tablet and computer.
-          <br />
-          Listen to the right music, wherever you are.
+          Spotify is now free on mobile, tablet and computer. Listen to the
+          right music, wherever you are.
         </p>
       </section>
 
-      <div class="line">
-        <h2>What’s on Spotify?</h2>
+      <div class="container">
+        <section class="whats-on-spotify" id="whats-on-spotify">
+          <h2 class="section-title">What’s on Spotify?</h2>
 
-        <hr />
+          <div class="row">
+            <div class="column">
+              <img src="./images/music-icon.png" alt="volume symbol" />
+              <h3>Millions of Songs</h3>
+              <p>There are millions of songs on Spotify</p>
+            </div>
+
+            <div class="column">
+              <img
+                src="./images/high-quality-icon.png"
+                alt="sound waves symbol"
+              />
+              <h3>HD Music</h3>
+              <p>Listen to music as if you were listening live</p>
+            </div>
+
+            <div class="column">
+              <img src="./images/devices-icon.png" alt="devices symbol" />
+              <h3>Stream Everywhere</h3>
+              <p>Stream music on your smartphone, tablet or computer</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="spotify-features" id="spotify-features">
+          <div>
+            <h2 class="section-title section-title--white">
+              It’s as yeezy as Kanye West.
+            </h2>
+            <div class="feature-blocks">
+              <h3>Search</h3>
+              <p>Know what you want to listen to? Just search and hit play.</p>
+            </div>
+
+            <div class="feature-blocks">
+              <h3>Browse</h3>
+              <p>
+                Check out the latest charts, brand new releases and great
+                playlists for right now.
+              </p>
+            </div>
+
+            <div class="feature-blocks">
+              <h3>Discover</h3>
+              <p>
+                Enjoy new music every Monday with your own personal playlist. Or
+                sit back and enjoy Radio.
+              </p>
+            </div>
+          </div>
+
+          <div>
+            <img
+              class="spotify-white-icon"
+              src="./images/spotify-icon-white.png"
+              alt="white Spotify logo"
+            />
+          </div>
+
+          <div>
+            <img
+              class="spotify-app"
+              src="./images/spotify-app.jpg"
+              alt="spotify app running in mobile phone"
+            />
+          </div>
+        </section>
       </div>
-      <section id="list">
-        <article class="container">
-          <img src="./images/music-icon.png" alt="music-icon" />
-          <h2>Millions of Songs</h2>
-          <p>
-            There are millions of
-            <br />
-            songs on Spotify
-          </p>
-        </article>
-        <article class="container">
-          <img src="./images/high-quality-icon.png" alt="high-quality-icon" />
-          <h2>HD Music</h2>
-          <p>
-            Listen to music as if you
-            <br />
-            were listening live
-          </p>
-        </article>
-
-        <article class="container">
-          <img src="./images/devices-icon.png" alt="devices-icon" />
-          <h2>Stream Everywhere</h2>
-          <p>
-            Stream music on your
-            <br />
-            smartphone, tablet or
-            <br />
-            computer
-          </p>
-        </article>
-      </section>
     </main>
-
-    <section class="app">
-      <figure class="icon-white">
-      <img src="./images/spotify-icon-white.png" alt="app" />  
-      </figure>
-      
-      <div>
-        <h2>It’s as yeezy as Kanye West.</h2>
-
-        <h2>Search</h2>
-
-        <p>
-          Know what you want to listen to?
-          <br />
-          Just search and hit play.
-        </p>
-
-        <h2>Browse</h2>
-
-        <p>
-          Check out the latest charts,
-          <br />
-          brand new releases and great
-          <br />
-          playlists for right now.
-        </p>
-
-        <h2>Discover</h2>
-
-        <p>
-          Enjoy new music every Monday
-          <br />
-          with your own personal playlist.
-          <br />
-          Or sit back and enjoy Radio.
-        </p>
-
-       
- 
-
-        <img class="icon-app" src="./images/spotify-app.jpg" alt="app" />
-      </div>
-    </section>
   </body>
 </html>
